--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                 <a href="projects/GoogleCharts/index.html">
 
-                  <img src="static/images/GoogleCharts.png" alt="1" style="width:100%">
+                  <img src="static/images/GoogleCharts.PNG" alt="1" style="width:100%">
                   <div class="caption">
                     <p>Creating interactive graphs with Google Charts.
                     <ul>
